<resources>
    <string name="app_name">Spice Locker</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="welcome_title">Welcome to Spice Locker!</string>
    <string name="welcome_message">Tired of going to the store and buying spices you already have? Keep track of everything right here in Spice Locker! </string>
    <string name="ok_button_text">OK</string>
    <string name="instruction_title">Instructions</string>
    <string name="instruction_step_one">
        1. Navigate to the Spice Locker screen with
    </string>
    <string name="formatted_spice_volume">%s%s</string>
    <string name="formatted_spice_used">%s%s</string>
    <string name="logout_text">Logout</string>
    <string name="name_label_text">Name:</string>
    <string name="unit_label_text">Unit:</string>
    <string name="volume_label_text">Volume:</string>
    <string name="amount_used_label_text">Amount Used:</string>
    <string name="brand_label_text">Brand:</string>
    <string name="description_label_text">Description:</string>
    <string name="save_button_text">Save</string>
</resources>
